--- a/src/partials/header-hero.html
+++ b/src/partials/header-hero.html
@@ -37,8 +37,7 @@
               </button>
             </li>
           </ul>
-        </div>
-        <div class="info">
+          <div class="info">
           <img
             class="info__img"
             srcset="./images/milk-img.png 1x, ./images/milk-img@2x.png 2x"
@@ -57,25 +56,32 @@
               </svg>
             </button>
           </div>
+          </div>
         </div>
-        <ul class="sell-point">
-          <li class="sell-point__item">
-            <h2 class="sell-point__no">16</h2>
-            <p class="sell-point__type">cafes</p>
-          </li>
-          <li class="sell-point__item">
-            <h2 class="sell-point__no">23</h2>
-            <p class="sell-point__type">food trucks</p>
-          </li>
-        </ul>
-        <div>
-          <img
-            class="hero__img"
-            srcset="./images/header-img.png 1x, ./images/header-img@2x.png 2x"
-            src="./images/hero-img.png"
-            alt="Enjoy icecream"
-            width="304"
-          />
+      <div>
+          <ul class="sell-point">
+            <li class="sell-point__item">
+              <svg class="sell-point__icon" width="30" height="30">
+                <use href="images/icons.svg#icon-header-dot"></use>
+              </svg>
+              <h2 class="sell-point__no">16</h2>
+              <p class="sell-point__type">cafes</p>
+            </li>
+            <li class="sell-point__item">
+              <svg class="sell-point__icon" width="30" height="30">
+                <use href="images/icons.svg#icon-header-dot"></use>
+              </svg>
+              <h2 class="sell-point__no">23</h2>
+              <p class="sell-point__type">food trucks</p>
+            </li>
+          </ul>
+            <img
+              class="hero__img"
+              srcset="./images/header-img.png 1x, ./images/header-img@2x.png 2x"
+              src="./images/hero-img.png"
+              alt="Enjoy icecream"
+              width="304"
+            />
         </div>
       </div>
     </div>
