--- a/src/sass/_header-hero.scss
+++ b/src/sass/_header-hero.scss
@@ -7,7 +7,11 @@ body {
   }
   
   .header-section {
+    padding: 0 16px;
     background: #ffb8ca;
+    background-repeat: no-repeat;
+    background-image:  url("../images/header-icecream.png"), url("../images/header-elipse.png");
+    background-position:  top 100% right 37%, top 40% right 25%;
   }
   
   .header {
@@ -16,7 +20,7 @@ body {
     padding-top: 37px;
   
     &__icon {
-      margin: 0 auto 0 auto;
+      margin: 0 auto 0 0;
     }
   
     &__list {
@@ -52,7 +56,7 @@ body {
       background: #ffffff;
       border: none;
       border-radius: 22px;
-      margin: 0 auto 0 auto;
+      margin: 0 0 0 auto;
       padding: 12px 53px 12px 37px;
     }
   
@@ -62,15 +66,20 @@ body {
   }
   
   .hero {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    padding: 60px 0 60px 0;
+
     &__title {
-      font-family: "Titan One";
+      font-family: 'Titan One';
       font-style: normal;
       font-weight: 400;
-      font-size: 22px;
-      line-height: 25px;
+      font-size: 38px;
+      line-height: 44px;
       letter-spacing: 0.04em;
       text-transform: uppercase;
-      color: #ffffff;
+      color: #FFFFFF;
     }
   
     &__title--color-red {
@@ -105,6 +114,10 @@ body {
       color: #d41443;
       background: #ffffff;
     }
+    &__img {
+      display: block;
+      margin: 91px 0 -60px 0;
+      }
   }
   
   .info {
@@ -144,11 +157,39 @@ body {
     display: flex;
     flex-direction: column;
     gap: 18px;
+    padding:0 ;
+    align-items: flex-end;
   
     &__item {
-      background-image: url("../images/white-dot.png");
-      background-size: 30px, 30px, cover;
-      background-repeat: no-repeat;
+     display: flex;
+     flex-direction: column;
+     align-items: flex-end;
     }
+
+    &__no {
+      font-family: 'Titan One';
+      font-style: normal;
+      font-weight: 400;
+      font-size: 46px;
+      line-height: 53px;
+      text-align: right;
+      letter-spacing: 0.04em;
+      text-transform: uppercase;
+      color: #D41443;
+      margin: -23px 10px 0 0;
+    }
+
+    &__type {
+      font-family: 'DM Sans';
+      font-style: normal;
+      font-weight: 400;
+      font-size: 14px;
+      line-height: 18px;
+      text-align: right;
+      color: #FFFFFF;
+      margin: 0;
+     
+    }
+    
   }
   
