--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,6 +1,6 @@
 @import './common';
 @import './example';
-@import './header-hero';
+@import './components/header-hero';
 @import './components/about-modal';
 @import './components/about';
 @import './components/advantages';
