--- a/src/partials/header-hero.html
+++ b/src/partials/header-hero.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Titan+One&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/css/main.min.css" />
+    <link rel="stylesheet" href="./css/index.min.css" />
     <title><IceCream-header></title>
   </head>
 <header>
