--- a/src/sass/components/_products-section.scss
+++ b/src/sass/components/_products-section.scss
@@ -1,20 +1,25 @@
-@import '/src/sass/utils/vars';
+@import 'src/sass/utils/_vars.scss';
 .products {
   &__label {
+    font-family: $secondFamily;
     font-size: 30px;
     line-height: 1.13;
     text-align: center;
     letter-spacing: 0.04em;
     text-transform: uppercase;
     color: $secondaryColor;
+    margin-bottom: 16px;
+    margin-top: 60px;
   }
   &__title {
+    font-family: $secondFamily;
     font-size: 58px;
     line-height: 1.13;
     text-align: center;
     letter-spacing: 0.06em;
     text-transform: uppercase;
     color: $primaryColor;
+    margin-bottom: 150px;
   }
   &__list {
     display: flex;
@@ -30,12 +35,57 @@
     align-items: center;
     border-radius: 24px;
     background-color: #f0d1a5;
+    position: relative;
+    height: 538px;
     &:first-child {
       background-color: $primaryBackgroundColor;
     }
     &:last-child {
       background-color: #c2e297;
     }
+  }
+  &__suspension-dots::before {
+    content: '...';
+    color: $whiteColor;
+    font-size: 36px;
+    margin-right: 4px;
+    font-weight: bold;
+  }
+  &__subtitle {
+    font-family: $secondFamily;
+    font-size: 30px;
+    line-height: 1.13;
+    text-align: center;
+    letter-spacing: 0.04em;
+    text-transform: uppercase;
+    color: #ffffff;
+    margin-bottom: 32px;
+    padding-top: 261px;
+  }
+  &__description {
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 176%;
+    text-align: center;
+    letter-spacing: 0.04em;
+    color: white;
+    margin-top: 32px;
+    margin-left: 64px;
+    margin-right: 63px;
+    padding-bottom: 302px;
+  }
+  &__btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    border-style: none;
+    background-color: $whiteColor;
+    position: absolute;
+    top: 470px;
   }
 }
 .container {
