--- a/src/partials/about-advantages.html
+++ b/src/partials/about-advantages.html
@@ -10,8 +10,9 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"/>
         <link rel="stylesheet" href="./css/index.min.css">
     </head>
-    <body>
-        <!--ModalSection-->
+    <body>        
+        <main>
+            <!--ModalSection-->
         <div class="modal is-hidden" data-modal>
             <div class="inner-div">
                 <button data-modal-close class="close-button">
@@ -22,9 +23,8 @@
                 <p class="description">Ice cream is a frozen dessert, typically made from milk or cream and flavoured with a sweetener, either sugar or an alternative, and a spice, such as cocoa or vanilla, or with fruit such as strawberries or peaches. It can also be made by whisking a flavored cream base and liquid nitrogen together. Food coloring is sometimes added, in addition to stabilizers. The mixture is cooled below the freezing point of water and stirred to incorporate air spaces and to prevent detectable ice crystals from forming. The result is a smooth, semi-solid foam that is solid at very low temperatures (below 2 °C or 35 °F). It becomes more malleable as its temperature increases.</p>                            
             </div>
         </div>
-        <main>
             <!-- AboutSection -->
-            <section class="about-section">
+            <section class="about-section" id="about">
                 <div class="about-section__container container">
                     <h3 class="about-section__subtitle">tradition and love </h3>
                     <h2 class="about-section__title">how it’s made?</h2>
@@ -79,7 +79,7 @@
                 </div>
             </section>
             <!-- AdvantagesSection -->
-            <section class="advantages-section">
+            <section class="advantages-section" id="advantages">
                 <div class="advantages-section__container container">
                     <h2 hidden>advantages</h2>
                     <ul class="advantages-section__list unstyled-list">
@@ -99,6 +99,6 @@
                 </div>
             </section>
         </main>
-        <script src="./js/modal.js"></script>
+        <script src="./js/about-modal.js"></script>
     </body>
 </html>
