gallery-branch-second-commit

--- a/src/sass/components/_galery-section.scss
+++ b/src/sass/components/_galery-section.scss
@@ -12,24 +12,30 @@
     }
 }
 
-.gallery__grid {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 2.5px;
-    @media screen and (min-width: 768px) {
-        gap: 6px;
+    &__grid {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 2.5px;
+        @media screen and (min-width: 768px) {
+            gap: 6px;
+        }
+        @media screen and (min-width: 1280px) {
+            gap: 8px;
+        }
     }
-    @media screen and (min-width: 1280px) {
-        gap: 8px;
-    }
-}
 
 .gallery__grid picture {
-    border-radius: 20px;
+    border-radius: 8px;
     display: flex;
     flex-direction: column;
     overflow: hidden;
+    @media screen and (min-width: 768px) {
+        border-radius: 20px;
+    }
+    @media screen and (min-width: 1280px) {
+        border-radius: 20px;
+    }
 }
 
 .gallery__second-item {
