--- a/src/partials/gallery-section.html
+++ b/src/partials/gallery-section.html
@@ -1,84 +1,84 @@
 <section class="gallery">
     <div class="gallery__grid">
-        <div class="gallery__item">
+        <div>
             <picture>
                 <source media="screen and (max-width: 767px)"
-                    srcset="images/home1-M.jpg 1x, images/home1-M@2X.jpg 2x" width="44" height="44" />
+                    srcset="images/home1-m.jpg 1x, images/home1-m@2X.jpg 2x" width="44" height="44" />
                 <source media="screen and (min-width: 768px) and (max-width: 1279px)"
-                    srcset="images/home1-T.jpg 1x, images/home1-T@2x.jpg 2x" width="105" height="105" />
+                    srcset="images/home1-t.jpg 1x, images/home1-t@2x.jpg 2x" width="105" height="105" />
                 <img src="./images/home1.jpg" alt="Ice cream rolls"  />
             </picture>                
         </div>
         <div class="gallery__second-item">
             <picture>
                 <source media="screen and (max-width: 767px)"
-                    srcset="images/home2-M.jpg 1x, images/home2-M@2X.jpg 2x" width="44" height="44" />
+                    srcset="images/home2-m.jpg 1x, images/home2-m@2X.jpg 2x" width="44" height="44" />
                 <source media="screen and (min-width: 768px) and (max-width: 1279px)"
-                    srcset="images/home2-T.jpg 1x, images/home2-T@2x.jpg 2x" width="105" height="105" />
+                    srcset="images/home2-t.jpg 1x, images/home2-t@2x.jpg 2x" width="105" height="105" />
                 <img src="./images/home2.jpg" alt="Pink ice cream "/>
             </picture>
             <picture>
                 <source media="screen and (max-width: 767px)"
-                    srcset="images/home3-M.jpg 1x, images/home3-M@2X.jpg 2x" width="44" height="44" />
+                    srcset="images/home3-m.jpg 1x, images/home3-m@2X.jpg 2x" width="44" height="44" />
                 <source media="screen and (min-width: 768px) and (max-width: 1279px)"
-                    srcset="images/home3-T.jpg 1x, images/home3-T@2x.jpg 2x" width="105" height="105" />
+                    srcset="images/home3-t.jpg 1x, images/home3-t@2x.jpg 2x" width="105" height="105" />
                 <img src="./images/home3.jpg" alt="Strawberry ice cream"/>
             </picture>
         </div>
-        <div class="gallery__item">
+        <div>
             <picture>
                 <source media="screen and (max-width: 767px)"
-                    srcset="images/home4-M.jpg 1x, images/home4-M@2X.jpg 2x" width="89" height="90" />
+                    srcset="images/home4-m.jpg 1x, images/home4-m@2X.jpg 2x" width="89" height="90" />
                 <source media="screen and (min-width: 768px) and (max-width: 1279px)"
-                    srcset="images/home4-T.jpg 1x, images/home4-T@2x.jpg 2x" width="215" height="215" />
+                    srcset="images/home4-t.jpg 1x, images/home4-t@2x.jpg 2x" width="215" height="215" />
                 <img src="./images/home4.jpg" alt="Blueberry ice creams"/>
             </picture>
             <picture>
                 <source media="screen and (max-width: 767px)"
-                    srcset="images/home5-M.jpg 1x, images/home5-M@2X.jpg 2x" width="44" height="44" />
+                    srcset="images/home5-m.jpg 1x, images/home5-m@2X.jpg 2x" width="44" height="44" />
                 <source media="screen and (min-width: 768px) and (max-width: 1279px)"
-                    srcset="images/home5-T.jpg 1x, images/home5-T@2x.jpg 2x" width="105" height="105" />
+                    srcset="images/home5-t.jpg 1x, images/home5-t@2x.jpg 2x" width="105" height="105" />
                 <img src="./images/home5.jpg" alt="Girl eats ice cream"/>
             </picture>               
         </div>
         <div class="gallery__fourth-item">
             <picture>
                 <source media="screen and (max-width: 767px)"
-                    srcset="images/home6-M.jpg 1x, images/home6-M@2X.jpg 2x" width="44" height="44" />
+                    srcset="images/home6-m.jpg 1x, images/home6-m@2X.jpg 2x" width="44" height="44" />
                 <source media="screen and (min-width: 768px) and (max-width: 1279px)"
-                    srcset="images/home6-T.jpg 1x, images/home6-T@2x.jpg 2x" width="105" height="105" />
+                    srcset="images/home6-t.jpg 1x, images/home6-t@2x.jpg 2x" width="105" height="105" />
                 <img src="./images/home6.jpg" alt="Ice cream bowls "/>
             </picture>
             <picture>
                 <source media="screen and (max-width: 767px)"
-                    srcset="images/home7-M.jpg 1x, images/home7-M@2X.jpg 2x" width="44" height="44" />
+                    srcset="images/home7-m.jpg 1x, images/home7-m@2X.jpg 2x" width="44" height="44" />
                 <source media="screen and (min-width: 768px) and (max-width: 1279px)"
-                    srcset="images/home7-T.jpg 1x, images/home7-T@2x.jpg 2x" width="105" height="105" />
+                    srcset="images/home7-t.jpg 1x, images/home7-t@2x.jpg 2x" width="105" height="105" />
                 <img src="./images/home7.jpg" alt="City ice cream"/>
             </picture>
         </div>
-        <div class="gallery__item">
+        <div>
             <picture>
                 <source media="screen and (max-width: 767px)"
-                    srcset="images/home8-M.jpg 1x, images/home8-M@2X.jpg 2x" width="44" height="44" />
+                    srcset="images/home8-m.jpg 1x, images/home8-m@2X.jpg 2x" width="44" height="44" />
                 <source media="screen and (min-width: 768px) and (max-width: 1279px)"
-                    srcset="images/home8-T.jpg 1x, images/home8-T@2x.jpg 2x" width="105" height="105" />
+                    srcset="images/home8-t.jpg 1x, images/home8-t@2x.jpg 2x" width="105" height="105" />
                 <img src="./images/home8.jpg" alt="Dog eats ice cream"/>
             </picture>
             <picture>
                 <source media="screen and (max-width: 767px)"
-                    srcset="images/home9-M.jpg 1x, images/home9-M@2X.jpg 2x" width="44" height="44" />
+                    srcset="images/home9-m.jpg 1x, images/home9-m@2X.jpg 2x" width="44" height="44" />
                 <source media="screen and (min-width: 768px) and (max-width: 1279px)"
-                    srcset="images/home9-T.jpg 1x, images/home9-T@2x.jpg 2x" width="105" height="105" />
+                    srcset="images/home9-t.jpg 1x, images/home9-t@2x.jpg 2x" width="105" height="105" />
                 <img src="./images/home9.jpg" alt="Frappe ice cream"/>
             </picture>                
         </div>
-        <div class="gallery__item">
+        <div>
             <picture>
                 <source media="screen and (max-width: 767px)"
-                    srcset="images/home10-M.jpg 1x, images/home10-M@2X.jpg 2x" width="44" height="44" />
+                    srcset="images/home10-m.jpg 1x, images/home10-m@2X.jpg 2x" width="44" height="44" />
                 <source media="screen and (min-width: 768px) and (max-width: 1279px)"
-                    srcset="images/home10-T.jpg 1x, images/home10-T@2x.jpg 2x" width="105" height="105" />
+                    srcset="images/home10-t.jpg 1x, images/home10-t@2x.jpg 2x" width="105" height="105" />
                 <img src="./images/home10.jpg" alt="Ice cream jar"/>
             </picture>                
         </div>
