--- a/src/partials/about-advantages.html
+++ b/src/partials/about-advantages.html
@@ -13,7 +13,7 @@
     <body>        
         <main>
             <!--ModalSection-->
-        <div class="modal is-hidden" data-modal>
+        <div class="about-modal is-hidden" data-modal>
             <div class="inner-div">
                 <button data-modal-close class="close-button">
                     <svg width="15" height="15">
