--- a/src/sass/components/_common.scss
+++ b/src/sass/components/_common.scss
@@ -1,9 +1,22 @@
 @import '~node_modules/modern-normalize/modern-normalize.css';
-
+@import 'src/sass/utils/_vars.scss';
 body {
-    font-family: 'DM Sans';
-    font-weight: 400px;
-    font-style: normal;
-    font-size: 14px;
-     
+  font-family: 'DM Sans';
+  font-weight: 400px;
+  font-style: normal;
+  font-size: 14px;
+}
+.arrow-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  border-style: none;
+  background-color: $whiteColor;
+}
+.arrow-button__svg {
+  fill: #d41443;
 }
