--- a/src/partials/products-section.html
+++ b/src/partials/products-section.html
@@ -4,40 +4,40 @@
     <h2 class="products__title">PRODUCTS</h2>
     <ul class="products__list">
       <li class="products__list-item">
-        <h3 class="products__subtitle">ice cream</h3>
-        <div class="products__suspension-dots"></div>
-        <p class="products__description">
+        <h3 class="products__list-subtitle">ice cream</h3>
+        <div class="products__list-dots"></div>
+        <p class="products__list-description">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
           eiusmod tempor incididunt ut labore et
         </p>
-        <button class="products__btn" type="button">
-          <svg width="40px" height="40px" fill="#D41443">
+        <button class="arrow-button arrow-button--prod" type="button">
+          <svg class="arrow-button__svg" width="40px" height="40px">
             <use href="/src/images/sprite.svg#arrow-right"></use>
           </svg>
         </button>
       </li>
       <li class="products__list-item">
-        <h3 class="products__subtitle">ice coffee</h3>
-        <div class="products__suspension-dots"></div>
-        <p class="products__description">
+        <h3 class="products__list-subtitle">ice coffee</h3>
+        <div class="products__list-dots"></div>
+        <p class="products__list-description">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
           eiusmod tempor incididunt ut labore et
         </p>
-        <button class="products__btn" type="button">
-          <svg width="40px" height="40px" fill="#D41443">
+        <button class="arrow-button arrow-button--prod" type="button">
+          <svg class="arrow-button__svg" width="40px" height="40px">
             <use href="/src/images/sprite.svg#arrow-right"></use>
           </svg>
         </button>
       </li>
       <li class="products__list-item">
-        <h3 class="products__subtitle">milkshakes</h3>
-        <div class="products__suspension-dots"></div>
-        <p class="products__description">
+        <h3 class="products__list-subtitle">milkshakes</h3>
+        <div class="products__list-dots"></div>
+        <p class="products__list-description">
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
           eiusmod tempor incididunt ut labore et
         </p>
-        <button class="products__btn" type="button">
-          <svg class="products__svg" width="40px" height="40px" fill="#D41443">
+        <button class="arrow-button arrow-button--prod" type="button">
+          <svg class="arrow-button__svg" width="40px" height="40px">
             <use href="/src/images/sprite.svg#arrow-right"></use>
           </svg>
         </button>
