--- a/src/sass/components/_customer-rev-section.scss
+++ b/src/sass/components/_customer-rev-section.scss
@@ -1,6 +1,6 @@
 @import 'src/sass/utils/_vars.scss';
 
-.customer-rev {
+.customer-review {
   &__container {
     display: flex;
     flex-direction: column;
@@ -19,7 +19,11 @@
     background: #fafafa;
     width: 968px;
     position: relative;
-
+    transition: box-shadow 150ms var(--primary-cubic-bezier);
+      &:hover,
+      &:focus {
+          box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+      }
    
 }
   &__review {
@@ -32,7 +36,9 @@
     padding: 15px 35px 8px 37px;
     color: $blackColor;
     z-index: 1;
-
+   
+    // background-image: repeating-linear-gradient(#E1E1E1 0, #E1E1E1 1px, transparent 0, transparent 30px);
+   
     &::before {
       position: absolute;
       content: '';
@@ -42,20 +48,8 @@
       height: 40px;
       width: 54px; 
       z-index: -1;
-      
-      
+         
     }
-    &::after {
-        content: "";
-        position: absolute;
-        top: 100%;
-        width: 100%;
-        left: 0;
-        height: 1px;
-        background: repeating-linear-gradient(111.3deg, #E1E1E1, #E1E1E1);
-    
-    }      
-
   }
 
   &__name {
@@ -64,5 +58,111 @@
     line-height: 186%;
     text-align: center;
     color: $blackColor;
+    position: relative;
+
+    &::before {
+        content: '. . .';
+        position: absolute;
+        top: 0;
+        left: 33%;
+        bottom: 10px;
+        font-size: 40px;
+        height: 5px;
+        line-height: 0;
+        color: #C7133E;
+      }
   }
+
+  &__photo {
+    transition: transform .3s;
+    &:hover,
+      &:focus {
+        transform: scale(1.25);
+      }
+  }
+
 }
+
+.customer-reviews__line {
+    display: block;
+    position: absolute;
+    top: 74px;
+    left: 10%;
+    width: 80%;
+    height: 70%;
+    background-image: repeating-linear-gradient(#E1E1E1 0, #E1E1E1 1px, transparent 0, transparent 31px);
+    margin-right: auto;
+    margin-left: auto;
+}
+  
+//   .slider-wrapper {
+//     margin: 1rem;
+//     position: relative;
+//     overflow: hidden;
+//   }
+  
+//   .slides-container {
+//     height: calc(100vh - 2rem);
+//     width: 100%;
+//     display: flex;
+//     overflow: scroll;
+//     scroll-behavior: smooth;
+//     list-style: none;
+//     margin: 0;
+//     padding: 0;
+//     transition: all .15s cubic-bezier(.07,.95,0,1);
+//   }
+  
+//   .slide-arrow {
+//     position: absolute;
+//     display: flex;
+//     top: 0;
+//     bottom: 0;
+//     margin: auto;
+//     height: 4rem;
+//     background-color: white;
+//     border: none;
+//     width: 2rem;
+//     font-size: 3rem;
+//     padding: 0;
+//     cursor: pointer;
+//     opacity: 2;
+//     transition: opacity 100ms;
+//   }
+  
+//   .slide-arrow:hover,
+//   .slide-arrow:focus {
+//     opacity: 1;
+//   }
+  
+//   #slide-arrow-prev {
+//     left: 0;
+//     padding-left: 0.25rem;
+//     border-radius: 0 2rem 2rem 0;
+//   }
+  
+//   #slide-arrow-next {
+//     right: 0;
+//     padding-left: 0.75rem;
+//     border-radius: 2rem 0 0 2rem;
+//   }
+  
+//   .slide {
+//     width: 20%;
+//     height: 50%;
+//     flex: 1 0 100%;
+//     transition: all .15s cubic-bezier(.07,.95,0,1);
+// }
+  
+
+
+//   .slide:nth-child(1) {
+//     opacity:1;
+//   }
+  
+//   .slide:nth-child(2) {
+//     opacity:1;
+//   }
+  
+  
+  
