--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,1 +1,38 @@
-<h1>gallery</h1>
+<section>
+    <div>
+        <ul>
+            <li>
+                <picture>
+                    <img src="./images/ot1-D-X1.jpg" alt="">
+                </picture>
+            </li>
+            <li>
+                <picture></picture>
+            </li>
+            <li>
+                <picture></picture>
+            </li>
+            <li>
+                <picture></picture>
+            </li>
+            <li>
+                <picture></picture>
+            </li>
+            <li>
+                <picture></picture>
+            </li>
+            <li>
+                <picture></picture>
+            </li>
+            <li>
+                <picture></picture>
+            </li>
+            <li>
+                <picture></picture>
+            </li>
+            <li>
+                <picture></picture>
+            </li>
+        </ul>
+    </div>
+</section>
