--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -3,7 +3,7 @@
         <ul>
             <li>
                 <picture>
-                    <img src="./images/ot1-D-X1.jpg" alt="">
+                    <img src="../images/home-pic5 5.jpg" alt="">
                 </picture>
             </li>
             <li>
