--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -7,13 +7,19 @@
                 </picture>
             </li>
             <li>
-                <picture></picture>
+                <picture>
+                    <img src="./images/home-pic55.jpg" alt="">
+                </picture>
             </li>
             <li>
-                <picture></picture>
+                <picture>
+                    <img src="./images/home-pic55.jpg" alt="">
+                </picture>
             </li>
             <li>
-                <picture></picture>
+                <picture>
+                    <img src="./images/home-pic55.jpg" alt="">
+                </picture>
             </li>
             <li>
                 <picture></picture>
