--- a/src/partials/about-advantages.html
+++ b/src/partials/about-advantages.html
@@ -1,6 +1,6 @@
-<!DOCTYPE html>
-<html>
-    <head>
+<!-- <!DOCTYPE html>
+<html> -->
+    <!-- <head>
         <meta charset="UTF8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>IceCream</title>
@@ -9,22 +9,10 @@
         <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@500;700&family=Titan+One&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"/>
         <link rel="stylesheet" href="./css/index.min.css">
-    </head>
-    <body>        
-        <main>
-            <!--ModalSection-->
-        <div class="about-modal is-hidden" data-modal>
-            <div class="inner-div">
-                <button data-modal-close class="close-button">
-                    <svg width="15" height="15">
-                    <use href="images/icons-svg.svg#icon-close"></use>
-                    </svg>
-                </button>   
-                <p class="description">Ice cream is a frozen dessert, typically made from milk or cream and flavoured with a sweetener, either sugar or an alternative, and a spice, such as cocoa or vanilla, or with fruit such as strawberries or peaches. It can also be made by whisking a flavored cream base and liquid nitrogen together. Food coloring is sometimes added, in addition to stabilizers. The mixture is cooled below the freezing point of water and stirred to incorporate air spaces and to prevent detectable ice crystals from forming. The result is a smooth, semi-solid foam that is solid at very low temperatures (below 2 °C or 35 °F). It becomes more malleable as its temperature increases.</p>                            
-            </div>
-        </div>
+    </head> -->
+            
             <!-- AboutSection -->
-            <section class="about-section" id="about">
+            <section class="about-section" id="about">                
                 <div class="about-section__container container">
                     <h3 class="about-section__subtitle">tradition and love </h3>
                     <h2 class="about-section__title">how it’s made?</h2>
@@ -65,7 +53,7 @@
                                         <p class="description__secondary-text">Aliquam erat volutpat. Aenean accumsan.</p>
                                     </li>
                                     <li class="description__item">
-                                        <button data-modal-open class="button" type="button">
+                                        <button data-modal-open class="about-modal-button button" type="button">
                                             Read more
                                             <svg width="4.4" height="8">
                                                 <use href="images/icons-svg.svg#icon-btn-arrow"</use>
@@ -97,8 +85,6 @@
                         </li>
                     </ul>
                 </div>
-            </section>
-        </main>
-        <script src="./js/about-modal.js"></script>
-    </body>
-</html>
+            </section>       
+        <!-- <script src="./js/about-modal.js"></script> -->  
+<!-- </html> -->
