--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,6 +1,6 @@
-<!DOCTYPE html>
-<html>
-  <head>
+<!-- <!DOCTYPE html>
+<html> -->
+  <!-- <head>
     <title>Products</title>
     <link rel="stylesheet" href="css/index.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -9,9 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@700&family=Titan+One&display=swap"
       rel="stylesheet"
     />
-  </head>
-  <body>
-    <main>
+  </head> -->
       <div class="container">
         <section class="products__section"></section>
         <p class="products__subtitle">100% natural</p>
@@ -94,7 +92,5 @@
           </li>
         </ul>
       </div>
-    </main>
-    <script src="./js/products.js"></script>
-  </body>
-</html>
+    <!-- <script src="./js/products.js"></script> -->
+<!-- </html> -->
