--- a/src/sass/_contacts-locations.scss
+++ b/src/sass/_contacts-locations.scss
@@ -1,5 +1,6 @@
 .contacts-location-section {
   background-color: var(--second-section-color);
+  margin-top: 200px; //for DEV only - to be removed in PROD
 }
 
 .contacts-location {
