--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -1,6 +1,5 @@
 @import './common';
-@import './header';
-@import './hero';
+@import './hero-header';
 @import './products';
 @import './about-how-its-made';
 @import './advantages';
