--- a/src/sass/_hero-header.scss
+++ b/src/sass/_hero-header.scss
@@ -1,3 +1,31 @@
+:root {
+  --gray-color: #d9d9d9;
+  --black-color: #000000;
+  --white-color: #fff;
+
+  --brand-color: #d41443;
+  --primary1-color: #ffb8ca;
+  --primary2-color: #f0d1a5;
+  --primary3-color: #c2e297;
+
+  --secondary1-color: #ffa5ba;
+  --secondary2-color: #fafafa;
+
+  --bg-color: #fff5f6;
+  --bg-color2: #e5e5e5;
+  --modal-color: #e17992;
+  --text-color1: rgb(174, 173, 173);
+
+  --text-color1: #907e82;
+  --text-color2: #212121;
+  --hover-color: #ecebeb;
+
+  --main-font: 'DM Sans', sans-serif;
+  --second-font: 'Titan One', sans-serif;
+  --max-width: 100%;
+  --paragraph-color: rgba(144, 126, 130, 1);
+}
+
 .hero-container {
   max-width: 320px;
   margin-left: auto;
@@ -122,17 +150,17 @@
     z-index: 2;
   }
   &__photo {
-    width: 171px;
+    width: 170px;
     height: 410px;
     z-index: 2;
     position: absolute;
     bottom: 0;
     right: 32px;
-    background-image: url("../images/hero-header/hero__icecream.png");
+    background-image: url('../images/hero-header/hero__icecream.png');
   }
   &__inner {
     width: 100%;
-    height: calc(100% - 55px);
+    height: calc(100% - 50px);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -156,7 +184,7 @@
     display: none;
   }
   &__title {
-    font-family: "Titan One";
+    font-family: 'Titan One';
     font-weight: 400;
     font-size: 26px;
     line-height: 1.15;
@@ -213,8 +241,7 @@
 
 .hero__about {
   height: 350px;
-  .hero__title {
-  }
+
   .hero__circle {
     width: 250px;
     height: 250px;
@@ -272,7 +299,7 @@
       height: 336px;
       bottom: 0;
       right: 303px;
-      background-image: url("../images/hero-header/ice-cream336.png");
+      background-image: url('../images/hero-header/ice-cream336.png');
     }
     &__inner--left {
       max-width: 50%;
@@ -325,7 +352,7 @@
     .hero__inner--left--img {
       width: 152px;
       height: 154px;
-      background-image: url("../images/hero-header/milk.png");
+      background-image: url('../images/hero-header/milk.png');
       background-repeat: no-repeat;
     }
   }
@@ -343,7 +370,7 @@
     position: relative;
   }
   .hero__inner--number {
-    font-family: "Titan One";
+    font-family: 'Titan One';
     font-style: normal;
     font-weight: 400;
     font-size: 28px;
@@ -354,7 +381,7 @@
     z-index: 2;
   }
   .hero__inner--fresh {
-    font-family: "DM Sans";
+    font-family: 'DM Sans';
     font-style: normal;
     font-weight: 400;
     font-size: 8px;
@@ -375,7 +402,7 @@
   .hero__right--image {
     width: 190px;
     height: 150px;
-    background-image: url("../images/hero-header/lick190.png");
+    background-image: url('../images/hero-header/lick190.png');
     margin-top: auto;
   }
 }
@@ -406,7 +433,7 @@
       height: 557px;
       bottom: 0;
       right: 368px;
-      background-image: url("../images/hero-header/icecream236.png");
+      background-image: url('../images/hero-header/icecream236.png');
     }
   }
   .hero__inner {
@@ -429,7 +456,7 @@
     .hero__inner--left--img {
       width: 213px;
       height: 216px;
-      background-image: url("../images/hero-header/milk213.png");
+      background-image: url('../images/hero-header/milk213.png');
       background-repeat: no-repeat;
     }
     .hero__inner--link {
@@ -467,7 +494,7 @@
   .hero__right--image {
     width: 304px;
     height: 241px;
-    background-image: url("../images/hero-header/lick304.png");
+    background-image: url('../images/hero-header/lick304.png');
     margin-top: auto;
   }
 }
@@ -476,4 +503,120 @@
   .hide--button {
     display: none;
   }
+}
+
+/* The modal window from Hero - Header section */
+/* Fereastra mobile menu */
+.menu-toggle {
+  min-height: 40px;
+  min-width: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  margin: 0;
+  padding: 0;
+  background-color: transparent;
+  cursor: pointer;
+  border: none;
+  border-radius: 50%;
+  outline: none;
+}
+
+@media screen and (min-width: 1200px) {
+  .menu-toggle {
+    display: none;
+  }
+}
+
+.menu-toggle:hover,
+.menu-toggle:focus {
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+.menu-container {
+  position: fixed;
+  z-index: 500;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  padding: 10px 15px;
+  background-color: var(--modal-color);
+  transform: translateX(100%);
+  transition: transform 250ms ease-in-out;
+
+  display: flex;
+  flex-direction: column;
+}
+
+@media screen and (min-width: 768px) {
+  .menu-container {
+    width: 254px;
+    height: 100vh;
+    top: 0;
+    right: 0;
+    left: auto;
+  }
+}
+
+.menu-container.is-open {
+  transform: translateX(0);
+}
+
+.mobile-menu .link {
+  display: block;
+  padding: 10px;
+  color: var(--white-color);
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.28;
+  &:hover {
+    color: var(--brand-color);
+  }
+}
+
+.close-menu {
+  background: transparent;
+  box-shadow: none;
+  position: relative;
+  left: 85%;
+  width: 40px;
+  height: 40px;
+  outline: none;
+  border: none;
+  color: var(--white-color);
+  margin-bottom: 0px;
+}
+
+.close-menu > svg {
+  fill: currentColor;
+}
+
+.modal__button {
+  color: var(--brand-color);
+  background-color: white;
+  font-size: 16px;
+  line-height: 1.3;
+  border: none;
+  outline: none;
+  border-radius: 22px;
+  padding: 8px 68px;
+  margin-bottom: 32px;
+  margin-top: 26px;
+  max-width: 230px;
+  align-self: center;
+  &:hover {
+    transform: translateY(-15px);
+    //font-weight: 700;
+    transition: 1000ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+}
+
+.header__button__icon {
+  width: 8px;
+  height: 16px;
+  margin-left: 12px;
+  position: relative;
+  top: 3px;
 }
