--- a/src/partials/footer-section.html
+++ b/src/partials/footer-section.html
@@ -1,9 +1,9 @@
 <footer class="footer">
     <div class="container footer__container">
-        <div class="footer__box">
-            <div class="footer__signature-box">
+        <div class="footer__bos">
+            <div class="footer__title">
                 <p class="footer__signature">
-                    homemade ice cream made<br /><span class="footer__signature-part">with passion</span>
+                    homemade ice cream made<br /><span class="footer__second-title">with passion</span>
                 </p>
             </div>
             <div class="footer_contacts">
