--- a/src/partials/products-section.html
+++ b/src/partials/products-section.html
@@ -4,19 +4,24 @@
     <h2 class="products__title">PRODUCTS</h2>
     <ul class="products__list">
       <li class="products__list-item">
-        <h3 class="products__list-subtitle">ice cream</h3>
-        <div class="products__list-dots"></div>
-        <p class="products__list-description">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et
-        </p>
-        <button class="arrow-button arrow-button--prod" type="button">
-          <svg class="arrow-button__svg" width="40px" height="40px">
-            <use href="/src/images/sprite.svg#arrow-right"></use>
-          </svg>
-        </button>
+        <div class="card">
+          <h3 class="products__list-subtitle">ice cream</h3>
+          <div class="products__list-dots"></div>
+          <p class="products__list-description">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et
+          </p>
+          <div>
+          <button class="arrow-button arrow-button--prod" type="button">
+            <svg class="arrow-button__svg" width="40px" height="40px">
+              <use href="/src/images/sprite.svg#arrow-right"></use>
+            </svg>
+          </button>
+        </div>
+        </div>
       </li>
       <li class="products__list-item">
+        <div class="card">
         <h3 class="products__list-subtitle">ice coffee</h3>
         <div class="products__list-dots"></div>
         <p class="products__list-description">
@@ -28,8 +33,10 @@
             <use href="/src/images/sprite.svg#arrow-right"></use>
           </svg>
         </button>
+        </div>
       </li>
       <li class="products__list-item">
+        <div class="card">
         <h3 class="products__list-subtitle">milkshakes</h3>
         <div class="products__list-dots"></div>
         <p class="products__list-description">
@@ -41,6 +48,7 @@
             <use href="/src/images/sprite.svg#arrow-right"></use>
           </svg>
         </button>
+        </div>
       </li>
     </ul>
   </div>
