--- a/src/sass/components/_customer-rev-section.scss
+++ b/src/sass/components/_customer-rev-section.scss
@@ -12,7 +12,7 @@
   &__rev {
     display: flex;
     flex-direction: column;
-    gap: 16px;
+    gap: 24px;
   }
   &__rev-container {
     padding: 32px 74px 31px 72px;
@@ -51,26 +51,24 @@
          
     }
   }
+  
 
-  &__name {
+  &__name-place {
     font-weight: 500;
     font-size: 20px;
     line-height: 186%;
     text-align: center;
     color: $blackColor;
     position: relative;
-
+   
     &::before {
         content: '. . .';
-        position: absolute;
-        top: 0;
-        left: 33%;
-        bottom: 10px;
+        color: #c7133e;
         font-size: 40px;
-        height: 5px;
-        line-height: 0;
-        color: #C7133E;
-      }
+        position: absolute;
+        bottom: 48px;
+        right: 48%;
+    }
   }
 
   &__photo {
@@ -84,17 +82,27 @@
 }
 
 .customer-reviews__line {
-    display: block;
+    width: 85%;
+    height: 42%;
+    background-image: repeating-linear-gradient(#e1e1e1 0 1px, #0000 0 31px);
     position: absolute;
     top: 74px;
-    left: 10%;
-    width: 80%;
-    height: 70%;
-    background-image: repeating-linear-gradient(#E1E1E1 0, #E1E1E1 1px, transparent 0, transparent 31px);
-    margin-right: auto;
-    margin-left: auto;
 }
   
+@media screen and (min-width: 768px) {
+    }
+  
+  @media screen and (min-width: 1280) {
+    .customer-review {
+        &__container {
+            width: 968px;
+        }
+    }
+
+
+  }
+
+
 //   .slider-wrapper {
 //     margin: 1rem;
 //     position: relative;
