--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -7,3 +7,4 @@
 @import './components/footer-section';
 @import './components/galery-section';
 @import './components/hero-header-section';
+@import './components/mobile-menu';
