--- a/src/sass/utils/_vars.scss
+++ b/src/sass/utils/_vars.scss
@@ -6,3 +6,5 @@ $mainBrownColor:  #907E82;
 $blackColor: #000000;
 $whiteColor: #FFFFFF;
 $secondFamily: 'Titan One';
+$thirdColor: #e17992;
+$main-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
