--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,43 +1,39 @@
-<section>
+<section class="gallery">
     <div>
-        <ul>
+        <ul class="gallery__pictures">
             <li>
-                <picture>
-                    <img src="./images/home-pic55.jpg" alt="">
-                </picture>
+                
+                <img src="./images/home-pic11.jpg" alt="" width="138px" height="138.68px" >
+                
             </li>
             <li>
-                <picture>
-                    <img src="./images/home-pic55.jpg" alt="">
-                </picture>
+                
+                <img src="./images/home-pic21.jpg" alt="" width="138px" height="138.68px">
+                <img src="./images/home-pic22.jpg" alt="" width="138px" height="138.68px">
+                
             </li>
             <li>
-                <picture>
-                    <img src="./images/home-pic55.jpg" alt="">
-                </picture>
+                
+                <img src="./images/home-pic31.jpg" alt="" width="283px" height="283.34px">
+                <img src="./images/home-pic32.jpg" alt="" width="138px" height="138.68px">
+                
             </li>
             <li>
-                <picture>
-                    <img src="./images/home-pic55.jpg" alt="">
-                </picture>
+                
+                <img src="./images/home-pic41.jpg" alt="" width="138px" height="138.68px">
+                <img src="./images/home-pic42.jpg" alt="" width="138px" height="138.68px">
+                
             </li>
             <li>
-                <picture></picture>
+                
+                <img src="./images/home-pic51.jpg" alt="" width="138px" height="138.68px">
+                <img src="./images/home-pic52.jpg" alt="" width="138px" height="138.68px">
+                
             </li>
             <li>
-                <picture></picture>
-            </li>
-            <li>
-                <picture></picture>
-            </li>
-            <li>
-                <picture></picture>
-            </li>
-            <li>
-                <picture></picture>
-            </li>
-            <li>
-                <picture></picture>
+               
+                <img src="./images/home-pic61.jpg" alt="" width="138px" height="138.68px">
+                
             </li>
         </ul>
     </div>
