--- a/src/partials/header-hero.html
+++ b/src/partials/header-hero.html
@@ -1,35 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Titan+One&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="./css/index.min.css" />
-    <title><IceCream-header></title>
-  </head>
 <header>
     <div class="container header-section">
       <div class="header">
         <svg class="header__icon" width="199" height="50">
-          <use href="images/icons.svg#icon-logo"></use>
+          <use href="images/header-hero/icons.svg#icon-logo"></use>
         </svg>
+        <nav>
         <ul class="header__list">
-          <li class="header__item"><a href="#"></a>Home</li>
-          <li class="header__item"><a href="#"></a>About us</li>
-          <li class="header__item"><a href="#"></a>How it’s made?</li>
-          <li class="header__item"><a href="#"></a>Our products</li>
-          <li class="header__item"><a href="#"></a>Contact</li>
+          <li><a class="header__item" href="#">Home</a></li>
+          <li><a class="header__item" href="#">About us</a></li>
+          <li><a class="header__item" href="#">How it’s made?</a></li>
+          <li><a class="header__item" href="#">Our products</a></li>
+          <li><a class="header__item" href="#">Contact</a></li>
         </ul>
+      </nav>
         <button class="header__buy-btn" type="button">
           Buy now
           <svg class="header__btn-icon" width="8" height="8">
-            <use href="images/icons.svg#icon-btn-arrow"></use>
+            <use href="images/header-hero/icons.svg#icon-btn-arrow"></use>
           </svg>
         </button>
       </div>
@@ -77,14 +64,14 @@
           <ul class="sell-point">
             <li class="sell-point__item">
               <svg class="sell-point__icon" width="30" height="30">
-                <use href="images/icons.svg#icon-header-dot"></use>
+                <use href="images/header-hero/icons.svg#icon-header-dot"></use>
               </svg>
               <h2 class="sell-point__no">16</h2>
               <p class="sell-point__type">cafes</p>
             </li>
             <li class="sell-point__item">
               <svg class="sell-point__icon" width="30" height="30">
-                <use href="images/icons.svg#icon-header-dot"></use>
+                <use href="images/header-hero/icons.svg#icon-header-dot"></use>
               </svg>
               <h2 class="sell-point__no">23</h2>
               <p class="sell-point__type">food trucks</p>
@@ -92,13 +79,12 @@
           </ul>
             <img
               class="hero__img"
-              srcset="./images/header-img.png 1x, ./images/header-img@2x.png 2x"
-              src="./images/hero-img.png"
+              srcset="./images/header-hero/header-img.png 1x, ./images/header-hero/header-img@2x.png 2x"
+              src="./images/header-hero/hero-img.png"
               alt="Enjoy icecream"
               width="304"
             />
         </div>
       </div>
     </div>
-  </header>
-</html>
+</header>
