--- a/src/sass/components/_header-hero.scss
+++ b/src/sass/components/_header-hero.scss
@@ -1,16 +1,8 @@
-body {
-    margin: 0;
-  }
-  
-  .container {
-    margin: 0 auto;
-  }
-  
-  .header-section {
+.header-section {
     padding: 0 16px;
     background: #ffb8ca;
     background-repeat: no-repeat;
-    background-image:  url("../images/header-icecream.png"), url("../images/header-elipse.png");
+    background-image:  url("../images/header-hero/header-icecream.png"), url("../images/header-hero/header-elipse.png");
     background-position:  top 100% right 37%, top 40% right 25%;
   }
   
@@ -41,7 +33,13 @@ body {
       display: flex;
       align-items: center;
       color: #ffffff;
-    }
+      text-decoration: none;
+      &:hover,
+      &:focus {
+        color: #D41443;
+        cursor: pointer;
+  }
+}
   
     &__buy-btn {
       font-family: "DM Sans";
@@ -58,6 +56,10 @@ body {
       border-radius: 22px;
       margin: 0 0 0 auto;
       padding: 12px 53px 12px 37px;
+      &:hover,
+      &:focus {
+        background: #ECEBEB;
+      }
     }
   
     &__btn-icon {
@@ -192,4 +194,3 @@ body {
     }
     
   }
-  
