--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -19,19 +19,19 @@ img {
 }
 .container {
   margin: 0px auto;
-  width: 320px;
+  width: 100%;
   padding: 0 15px;
 }
-@media screen and (min-width: 768px) {
-  .container {
-    width: 768px;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .container {
-    width: 1200px;
-  }
-}
+// @media screen and (min-width: 768px) {
+//   .container {
+//     width: 768px;
+//   }
+// }
+// @media screen and (min-width: 1200px) {
+//   .container {
+//     width: 1200px;
+//   }
+// }
 
 
 
