--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -3,15 +3,15 @@
   &__container {
     display: flex;
     flex-direction: column;
-    gap: 60px;
+    gap: 40px;
     padding: 20px;
     padding-bottom: 3px;
+    margin-bottom: 0;
   }
-  &__buttons-container {
+  &__info-container{
     display: flex;
     flex-direction: column;
-    align-items: center;
-    gap: 10px;
+    gap: 40px;
   }
   &__title-container {
     display: flex;
@@ -31,46 +31,23 @@
     border-top: 1px solid #e1e1e1;
     padding-top: 16px;
   }
-  &__button {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 5px;
-    width: 161px;
-    height: 44px;
-    align-items: center;
-    background-color: var(--brand-color-red);
-    border-radius: 22px;
-    border: none;
-    cursor: pointer;
-    font-family: 'DM Sans';
-    font-weight: 700;
-    line-height: 1.3125;
-    text-align: center;
-    color: var(--brand-color-white);
-  }
-    &__button--franchise {
-    background-color: var(--brand-color-white);
-    color: var(--brand-color-red);
-  }
-  &__button--franchise:hover,
-  &__button--franchise:focus {
-    background-color: #ecebeb;
-  }
   &__title-slogan {
     font-family: 'Titan One';
     font-size: 18px;
-    line-height: 21px;
+    line-height: 1.166;
+    letter-spacing: 0.04em;
     text-transform: uppercase;
     color: #ffa5ba;
+    width: 234px;
   }
   &__title-motto {
     font-family: 'Titan One';
-    font-size: 58px;
-    line-height: 66px;
-    letter-spacing: 0.06em;
+    font-size: 34px;
+    line-height: 1.147;
+    letter-spacing: 0.04em;
     text-transform: uppercase;
     color: var(--brand-color-red);
+    width: 234px;
   }
   &__social-links {
     display: flex;
@@ -78,8 +55,8 @@
   }
   &__social-links-item {
     color: var(--brand-color-white);
-    width: 34px;
-    height: 34px;
+    width: 32px;
+    height: 32px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -107,13 +84,7 @@
     text-align: right;
     color: #000000;
   }
-  &__social-number {
-    font-family: 'DM Sans';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 12px;
-    line-height: 186%;
-    text-align: right;
+  &__social-text--number {
     color: var(--brand-color-red);
     text-decoration: none;
   }
@@ -130,11 +101,18 @@
     line-height: 152%;
     text-align: center;
     color: #907e82;
+    letter-spacing: 0.02em;
     width: 140px;
   }
 }
 @media screen and (min-width: 768px) {
   .footer {
+    &__info-container{
+      display: flex;
+      flex-direction: row;
+      justify-content: space-between;
+      align-items: center;
+    }
     &__buttons-container {
       flex-direction: row;
       justify-content: center;
@@ -142,15 +120,47 @@
     }
     &__copyright-text {
       width: 280px;
+      line-height: 186%;
+    }
+    &__social-text {
+      font-size: 14px;
+    }
+    &__social-links-item {
+      width: 34px;
+      height: 34px;
+    }
+    &__title-slogan {
+      font-size: 26px;
+      line-height: 1.153;
+      width: 340px;
+    }
+    &__title-motto {
+      font-size: 48px;
+      line-height: 1.145;
+      letter-spacing: 0.06em;
+      width: 340px;
     }
   }
 }
 @media screen and (min-width: 1200px) {
   .footer {
-    &__buttons-container {
-      flex-direction: row;
-      justify-content: center;
-      gap: 12px;
+    &__container {
+      padding-top: 100px;
+      gap: 60px;
+    }
+    &__info-container{
+      align-items: flex-end;
+    }
+    &__title-slogan {
+      font-size: 30px;
+      line-height: 1.133;
+      width: 477px;
+    }
+    &__title-motto {
+      font-size: 58px;
+      line-height: 1.1379;
+      letter-spacing: 0.06em;
+      width: 477px;
     }
   }
 }
