--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -437,8 +437,6 @@
       width: 340px;
       height: 57px;
     }
-    &__list {
-    }
 
     .footer-title--second {
       width: 340px;
@@ -798,6 +796,6 @@
   fill: $primary-color;
 }
 .is-hidden-2 {
-  visibility: hidden;
+  display: none;
   opacity: 0;
 }
