--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,38 +1,39 @@
 <section class="gallery">
-    <div>
-        <ul class="gallery__pictures">
-            <li>
+    <div class="gallery-container">
+        <h2 class="gallery-title">Ice-cream's gallery</h2>
+        <ul class="gallery-list">
+            <li class="gallery-list__column-1">
                 
-                <img src="./images/home-pic11.jpg" alt="" width="138px" height="138.68px" >
-                
-            </li>
-            <li>
-                
-                <img src="./images/home-pic21.jpg" alt="" width="138px" height="138.68px">
-                <img src="./images/home-pic22.jpg" alt="" width="138px" height="138.68px">
+                <img class="gallery-list__pictures picture-1" src="./images/home-pic11.jpg" alt="" width="138px" height="138.68px" >
                 
             </li>
-            <li>
+            <li class="gallery-list__column-2">
                 
-                <img src="./images/home-pic31.jpg" alt="" width="283px" height="283.34px">
-                <img src="./images/home-pic32.jpg" alt="" width="138px" height="138.68px">
-                
-            </li>
-            <li>
-                
-                <img src="./images/home-pic41.jpg" alt="" width="138px" height="138.68px">
-                <img src="./images/home-pic42.jpg" alt="" width="138px" height="138.68px">
+                <img class="gallery-list__pictures picture-2" src="./images/home-pic21.jpg" alt="" width="138px" height="138.68px">
+                <img class="gallery-list__pictures picture-3" src="./images/home-pic22.jpg" alt="" width="138px" height="138.68px">
                 
             </li>
-            <li>
+            <li class="gallery-list__column-3">
                 
-                <img src="./images/home-pic51.jpg" alt="" width="138px" height="138.68px">
-                <img src="./images/home-pic52.jpg" alt="" width="138px" height="138.68px">
+                <img class="gallery-list__pictures picture-4" src="./images/home-pic31.jpg" alt="" width="283px" height="283.34px">
+                <img class="gallery-list__pictures picture-5" src="./images/home-pic32.jpg" alt="" width="138px" height="138.68px">
                 
             </li>
-            <li>
+            <li class="gallery-list__column-4">
+                
+                <img class="gallery-list__pictures picture-6" src="./images/home-pic41.jpg" alt="" width="138px" height="138.68px">
+                <img class="gallery-list__pictures picture-7" src="./images/home-pic42.jpg" alt="" width="138px" height="138.68px">
+                
+            </li>
+            <li class="gallery-list__column-5">
+                
+                <img class="gallery-list__pictures picture-8" src="./images/home-pic51.jpg" alt="" width="138px" height="138.68px">
+                <img class="gallery-list__pictures picture-9" src="./images/home-pic52.jpg" alt="" width="138px" height="138.68px">
+                
+            </li>
+            <li class="gallery-list__column-6">
                
-                <img src="./images/home-pic61.jpg" alt="" width="138px" height="138.68px">
+                <img class="gallery-list__pictures picture-10" src="./images/home-pic61.jpg" alt="" width="138px" height="138.68px">
                 
             </li>
         </ul>
