--- a/src/sass/gallery.scss
+++ b/src/sass/gallery.scss
@@ -1,15 +1,92 @@
+
 .gallery {
-    background: #E5E5E5;
+    background: #ffffff;
 }
 
-.gallery__pictures {
+.gallery-container {
+    padding-bottom: 100px;
+}
+
+.gallery-title {
+    position: absolute;
+    display: none;
+}
+
+.gallery-list {
     display: flex;
     align-items: center;
     justify-content: center;
     list-style: none;
+    gap: 9px;
 }
 
-.gallery__pictures > li {
-    
+.gallery-list > li {
     flex-direction: column;
+}
+
+.gallery-list__pictures {
+    border-radius: 20px;
+    margin-bottom: 9px;
+}
+
+.gallery-list__column-1 {
+    margin-bottom: 40px;
+}
+
+.gallery-list__column-4 {
+    margin-top: 60px;
+}
+
+.gallery-list__column-5 {
+    margin-bottom: 60px;
+}
+
+.picture-1:hover {
+    transform: scale(1.3) translate(-15px);
+    transition: 500ms;
+}
+
+.picture-2:hover {
+    transform: scale(1.3) translate(-15px, -15px);
+    transition: 500ms;
+}
+
+.picture-3:hover {
+    transform: scale(1.3) translate(-15px, 15px);
+    transition: 500ms;
+}
+
+.picture-4:hover {
+    transform: scale(1.3)translate(32px, -32px);
+    transition: 500ms;
+}
+
+.picture-5:hover {
+    transform: scale(1.3) translate(15px, 15px);
+    transition: 500ms;
+}
+
+.picture-6:hover {
+    transform: scale(1.3) translate(-15px, -15px);
+    transition: 500ms;
+}
+
+.picture-7:hover {
+    transform: scale(1.3) translate(-15px, 15px);
+    transition: 500ms;
+}
+
+.picture-8:hover {
+    transform: scale(1.3) translate(-15px, -15px);
+    transition: 500ms;
+}
+
+.picture-9:hover {
+    transform: scale(1.3) translate(-15px, 15px);
+    transition: 500ms;
+}
+
+.picture-10:hover {
+    transform: scale(1.3)translate(15px, -22px);
+    transition: 500ms;
 }
