--- a/src/sass/gallery.scss
+++ b/src/sass/gallery.scss
@@ -42,7 +42,7 @@
 }
 
 .picture-1:hover {
-    transform: scale(1.3) translate(-15px);
+    transform: scale(1.3)translate(-15px, 10px);
     transition: 500ms;
 }
 
