--- a/src/sass/gallery.scss
+++ b/src/sass/gallery.scss
@@ -24,21 +24,20 @@
     flex-direction: column;
 }
 
-.gallery-list__pictures {
+.gallery-list {
+    &__pictures {
     border-radius: 20px;
     margin-bottom: 9px;
-}
-
-.gallery-list__column-1 {
-    margin-bottom: 40px;
-}
-
-.gallery-list__column-4 {
-    margin-top: 60px;
-}
-
-.gallery-list__column-5 {
-    margin-bottom: 60px;
+    }
+    &__column-1 {
+        margin-bottom: 40px;
+    }
+    &__column-4 {
+        margin-top: 60px;
+    }
+    &__column-5 {
+        margin-bottom: 60px;
+    }
 }
 
 .picture-1:hover {
@@ -90,3 +89,7 @@
     transform: scale(1.3)translate(15px, -22px);
     transition: 500ms;
 }
+
+// @media screen and (max-width: 768px) {
+
+// }
