heading spaces corrected

--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -8,7 +8,7 @@
     </div>
 
     <!-- Drinks -->
-    <ul class="p-grid unstyled-list">
+    <ul class="p-grid products-unstyled-list">
         <li class="products">
             <img src="/src/images/products-imgs/home-pic1.png" alt="icecream" class="products__image">
             <div class="products__wrapper1">
