--- a/src/sass/_products.scss
+++ b/src/sass/_products.scss
@@ -2,7 +2,7 @@
   box-sizing: border-box;
 }
 
-.unstyled-list {
+.products-unstyled-list {
   list-style: none;
 }
 
@@ -24,7 +24,6 @@
 }
 
 .p-titles__paragraph {
-  padding-bottom: 16px;
   font-weight: var(--font-weight-400);
   color: #ffa5ba;
   font-family: 'Titan One';
@@ -32,6 +31,7 @@
   line-height: 34px;
   letter-spacing: 0.04em;
   text-transform: uppercase;
+  margin-bottom: -16px;
 
   // For tablets
   @media only screen and (min-width: 768px) and (max-width: 1024px) {
@@ -55,6 +55,7 @@
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: #d41443;
+  margin-bottom: -20px;
 
   // For tablets
   @media only screen and (min-width: 768px) and (max-width: 1024px) {
@@ -254,7 +255,7 @@
 .products__subtitle {
   font-family: 'Titan One';
   font-weight: var(--font-weight-400);
-  font-size: var(--font-size-20);
+  font-size: 30px;
   line-height: 23px;
   text-align: center;
   letter-spacing: 0.04em;
