hero-header-section-day-02

--- a/src/sass/components/_hero-header-section.scss
+++ b/src/sass/components/_hero-header-section.scss
@@ -4,36 +4,58 @@
   list-style: none;
 }
 
-.container-header {
-}
-
 .header {
   background-color: $primaryBackgroundColor;
 }
 
-.header-hero {
+.container {
+  width: 1200px;
+  margin: auto;
+  height: 664px;
 }
 
 .header-nav {
   display: flex;
+  margin: auto;
+  align-items: center;
+  width: 1168px;
+  padding-top: 37px;
+  margin-top: 0;
+  margin-bottom: 0;
 }
+.nav {
+  &__list {
+    display: flex;
+    padding: 0;
+    gap: 35px;
+  }
 
-.header-nav--list {
-  display: flex;
-  padding: 0px;
+  &__list-item {
+    font-family: 'DM Sans';
+    line-height: 21px;
+    letter-spacing: 0em;
+    text-align: left;
+    text-decoration: none;
+    color: $whiteColor;
+    font-size: 16px;
+    font-weight: 700;
+  }
+
+  &__list-item:hover {
+    color: $primaryColor;
+  }
 }
 
 .header-logo {
-  margin-left: 16px;
-  margin-top: 37px;
+  margin-right: 128px;
 }
 
 .btn-nav {
   height: 44px;
   width: 159px;
   border-radius: 22px;
-  background-color: $whiteColor;
-  font-family: 'DM Sans';
+  border: 0px;
+  font-family: DM Sans;
   font-size: 16px;
   font-weight: 700;
   line-height: 21px;
@@ -41,31 +63,191 @@
   text-align: center;
   color: $primaryColor;
   margin-left: 141px;
-  margin-top: 40px;
-  border: 0px;
 
   &__svg {
     margin-left: 12px;
   }
 }
-.header-nav--list {
-  border-radius: nullpx;
-  font-family: DM Sans;
-  font-size: 16px;
-  font-weight: 700;
-  line-height: 21px;
-  letter-spacing: 0em;
-  text-align: left;
-  color: $whiteColor;
 
-  &__hover:hover {
+.hero {
+  width: 1168px;
+  margin: auto;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.hero-group {
+  display: flex;
+}
+
+.hero-title {
+  height: 137px;
+  width: 277px;
+  border-radius: nullpx;
+  font-family: Titan One;
+  font-weight: 400;
+  letter-spacing: 0.04em;
+  text-align: left;
+  cursor: pointer;
+  margin-top: 60px;
+
+  &__first {
+    font-size: 37px;
+    line-height: 42px;
+    color: $whiteColor;
+  }
+  &__second {
+    font-size: 38px;
+    line-height: 44px;
+    color: $whiteColor;
+  }
+
+  &__last {
+    font-size: 58px;
+    line-height: 52px;
     color: $primaryColor;
-    cursor: pointer;
   }
 }
 
-.header-nav--list {
-  gap: 35px;
-  margin-left: 128px;
-  margin-top: 52px;
+.hero-btn {
+  display: flex;
+  margin-top: 24px;
+
+  &__list {
+    display: flex;
+    gap: 12px;
+    padding: 0;
+    margin: 0;
+  }
+
+  &__list-first {
+    height: 40px;
+    width: 107px;
+    border-radius: 20px;
+    border: 0;
+    color: $primaryColor;
+    font-family: DM Sans;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 18px;
+    letter-spacing: 0em;
+    text-align: center;
+  }
+  &__list-first:hover {
+    background-color: $primaryColor;
+    cursor: pointer;
+    color: $whiteColor;
+  }
+
+  &__list-second {
+    height: 40px;
+    width: 138px;
+    border-radius: 20px;
+    border: 0;
+    color: $primaryColor;
+    font-family: DM Sans;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 18px;
+    letter-spacing: 0em;
+    text-align: center;
+  }
+
+  &__list-second:hover {
+    background-color: $primaryColor;
+    cursor: pointer;
+    color: $whiteColor;
+  }
+}
+
+.hero-number {
+  display: flex;
+
+  &__list {
+    display: flex;
+    flex-direction: column;
+    padding: 0;
+    margin: 0;
+    margin-left: 819px;
+    margin-top: 72px;
+  }
+
+  &__list-nr {
+    font-family: Titan One;
+    font-size: 46px;
+    font-weight: 400;
+    line-height: 53px;
+    letter-spacing: 0.04em;
+    text-align: right;
+    color: $primaryColor;
+  }
+
+  &__list-text {
+    font-family: DM Sans;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 18px;
+    letter-spacing: 0em;
+    text-align: right;
+    color: $whiteColor;
+    height: 18px;
+    width: 74px;
+    border-radius: nullpx;
+  }
+}
+
+.hero-milk {
+  display: flex;
+  flex-direction: column;
+
+  &__paragraf {
+    height: 78px;
+    width: 200px;
+    border-radius: nullpx;
+    font-family: DM Sans;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 20px;
+    letter-spacing: 0em;
+    text-align: left;
+    color: $whiteColor;
+    margin-top: 94px;
+    margin-bottom: 0;
+  }
+}
+
+.hero-btn-milk {
+  height: 26px;
+  width: 26px;
+  border-radius: 50%;
+  border: 0;
+}
+
+.hero-btn-milk-mod {
+  padding-top: 20px;
+}
+
+.hero-milk-cup {
+  display: flex;
+
+  &__image-mod {
+    height: 216px;
+    width: 213px;
+    border-radius: 0px;
+    margin-top: 40px;
+  }
+}
+
+.ice-cup {
+  left: 976px;
+  top: 108px;
+  position: absolute;
+
+  &__image {
+    height: 557px;
+    width: 236px;
+    left: 636px;
+    top: 108px;
+    border-radius: 0px;
+  }
 }
