--- a/src/partials/hero-header-section.html
+++ b/src/partials/hero-header-section.html
@@ -1,20 +1,30 @@
 <header class="header">
-  <div class="container-header">
+  <div class="container">
     <div class="header-nav">
       <a class="header-logo" href="#">
         <svg class="header-logo__svg" width="199px" height="50px">
           <use href="./images/sprite.svg#icon-Group"></use>
         </svg>
       </a>
-      <div class="header-nav">
-        <ul class="header-nav--list unstyled-list">
-          <li class="header-nav--list__hover">Home</li>
-          <li class="header-nav--list__hover">About us</li>
-          <li class="header-nav--list__hover">How it’s made?</li>
-          <li class="header-nav--list__hover">Our products</li>
-          <li class="header-nav--list__hover">Contact</li>
+      <nav class="nav">
+        <ul class="nav__list unstyled-list">
+          <li class="nav__list-item">
+            <a class="nav__list-item" href="#home">Home</a>
+          </li>
+          <li>
+            <a class="nav__list-item" href="#about-section.html">About us</a>
+          </li>
+          <li>
+            <a class="nav__list-item" href="#">How it’s made?</a>
+          </li>
+          <li>
+            <a class="nav__list-item" href="#">Our products</a>
+          </li>
+          <li>
+            <a class="nav__list-item" href="#">Contact</a>
+          </li>
         </ul>
-      </div>
+      </nav>
       <button class="btn-nav" type="button">
         Buy now
         <svg class="btn-nav__svg" width="4px" height="8px">
@@ -22,93 +32,111 @@
         </svg>
       </button>
     </div>
-    <div class="hero">
-      <h1 class="hero__title">
-        ice cream made
-        <br />
-        with passion<br />
-        <span class="hero__title-span">PASSION</span>
-      </h1>
-      <div class="hero-btn">
-        <ul class="hero-btn--list unstyled-list">
-          <li class="hero-btn--list__first">
-            <button type="button">Products</button>
-          </li>
-          <li class="hero--list__second">
-            <button type="button">How it’s made?</button>
-          </li>
-        </ul>
+    <section class="hero">
+      <div class="hero-group">
+        <div>
+          <div class="hero-title">
+            <h1>
+              <span class="hero-title__first">ICE CREAM</span>
+              <br />
+              <span class="hero-title__second">MADE WITH</span><br />
+              <span class="hero-title__last">PASSION</span>
+            </h1>
+          </div>
+          <div class="hero-btn">
+            <ul class="hero-btn__list unstyled-list">
+              <li>
+                <button class="hero-btn__list-first" type="button">
+                  Products
+                </button>
+              </li>
+              <li>
+                <button class="hero-btn__list-second" type="button">
+                  How it’s made?
+                </button>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="hero-number">
+          <ul class="hero-number__list unstyled-list">
+            <li>
+              <span class="hero-number__list-nr">16</span><br />
+              <span class="hero-number__list-text">cafes</span>
+            </li>
+            <li>
+              <span span class="hero-number__list-nr">23</span><br />
+              <span class="hero-number__list-text">food trucks</span>
+            </li>
+          </ul>
+        </div>
       </div>
-      <div>
-        <ul class="unstyled-list">
-          <li>
-            16<br />
-            <span>cafes</span>
-          </li>
-          <li>
-            23<br />
-            <span>food trucks</span>
-          </li>
-        </ul>
+      <div class="hero-milk-cup">
+        <div>
+          <picture>
+            <source
+              media="screen and (max-width:767px)"
+              srcset="images\milk-cup-t@x1.png, images\milk-cup-t@x2.png 2x"
+            />
+            <source
+              media="screen and (max-width:1200px)"
+              srcset="images\milk-cup-d@x1.png, images\milk-cup-d@x2.png 2x"
+            />
+            <img
+              class="hero-milk-cup__image-mod"
+              width="270"
+              src="./images/milk-cup-d@x1.png"
+              alt="Christopher Walker"
+            />
+          </picture>
+        </div>
+        <div class="hero-milk">
+          <div>
+            <p class="hero-milk__paragraf">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et
+            </p>
+          </div>
+          <div class="hero-btn-milk-mod">
+            <button class="hero-btn-milk">
+              <svg class="hero-btn-milk__svg" width="4px" height="8px">
+                <use href="./images/sprite.svg#icon-arrow-right-4"></use>
+              </svg>
+            </button>
+          </div>
+        </div>
+        <picture class="ice-cup">
+          <source
+            media="screen and (max-width:480px)"
+            srcset="images\ice-cup-m@x1.png, images\ice-cup-m@x2.png 2x"
+          />
+          <source
+            media="screen and (max-width:767px)"
+            srcset="images\ice-cup-t@x1.png, images\ice-cup-t@x2.png 2x"
+          />
+          <source
+            media="screen and (max-width:1200px)"
+            srcset="images\ice-cup-d@x1.png, images\ice-cup-d@x2.png 2x"
+          />
+          <img
+            class="ice-cup__image"
+            width="270"
+            src="./images/ice-cup-d@x1.png"
+            alt="ice-cup"
+          />
+        </picture>
+        <picture>
+          <source
+            media="screen and (max-width:480px)"
+            srcset="images\eat-ice-t@x1.png, images\eat-ice-t@x2.png 2x"
+          />
+          <source
+            media="screen and (max-width:767px)"
+            srcset="images\eat-ice-d@x1.png, images\eat-ice-d@x2.png 2x"
+          />
+          <img width="270" src="./images/eat-ice-d@x1.png" alt="ice" />
+        </picture>
       </div>
-    </div>
-    <div>
-      <picture>
-        <source
-          media="screen and (max-width:767px)"
-          srcset="images\milk-cup-t@x1.png, images\milk-cup-t@x2.png 2x"
-        />
-        <source
-          media="screen and (max-width:1200px)"
-          srcset="images\milk-cup-d@x1.png, images\milk-cup-d@x2.png 2x"
-        />
-        <img
-          width="270"
-          src="./images/milk-cup-d@x1.png"
-          alt="Christopher Walker"
-        />
-      </picture>
-    </div>
-    <div>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-        tempor incididunt ut labore et
-      </p>
-      <button></button>
-    </div>
-    <picture>
-      <source
-        media="screen and (max-width:480px)"
-        srcset="images\ice-cup-m@x1.png, images\ice-cup-m@x2.png 2x"
-      />
-      <source
-        media="screen and (max-width:767px)"
-        srcset="images\ice-cup-t@x1.png, images\ice-cup-t@x2.png 2x"
-      />
-      <source
-        media="screen and (max-width:1200px)"
-        srcset="images\ice-cup-d@x1.png, images\ice-cup-d@x2.png 2x"
-      />
-      <img
-        width="270"
-        src="./images/ice-cup-d@x1.png"
-        alt="Christopher Walker"
-      />
-    </picture>
-    <picture>
-      <source
-        media="screen and (max-width:480px)"
-        srcset="images\eat-ice-t@x1.png, images\eat-ice-t@x2.png 2x"
-      />
-      <source
-        media="screen and (max-width:767px)"
-        srcset="images\eat-ice-d@x1.png, images\eat-ice-d@x2.png 2x"
-      />
-      <img
-        width="270"
-        src="./images/eat-ice-d@x1.png"
-        alt="Christopher Walker"
-      />
-    </picture>
+    </section>
   </div>
 </header>
